# nn-sdk

./: .gitignore  CMakeLists.txt  README.md  nn-sdk.h  nn-sdk.java  test.c  test_sdk.py
engine_csdk/: CMakeLists.txt  common.cpp  common.h  nn_sdk.cpp  nn_sdk.h  parse_config.cpp  rapidjson_src  sdk_py.cpp  sdk_py.h  test.py  test_cc.cpp  version.cpp  version.h  version_config.h  version_config.h.in  version_config.py.in
engine_csdk/cmake/: findnumpy.cmake
engine_csdk/dyloader/: dyloader.cpp  dyloader.h  ft_loader.cpp  ft_loader.h  trt_loader.cpp  trt_loader.h
engine_csdk/entity/: tf_entities.cpp  tf_entities.h
engine_csdk/ft/: ft_csdk.cpp  ft_csdk.h
engine_csdk/jni_sdk/: java_sdk_cc.cpp  nn_sdk_nn_sdk.h
engine_csdk/onnx/: onnx_csdk.cpp  onnx_csdk.h
engine_csdk/py_nn_sdk/: __init__.py  csdk_wraper.py  nn_sdk.h  nn_sdk.java  readme.md  setup.py  setup_wrapper.py  test.c  test_aes.py  test_py.py  version_config.py
engine_csdk/pybind11/: pybind11.h
engine_csdk/tf_v1/: tf_csdk_v1.cpp  tf_csdk_v1.h
engine_csdk/tf_v2/: tf_csdk_v2.cpp  tf_csdk_v2.h
engine_csdk/trt/: trt_csdk.cpp  trt_csdk.h
java_project/: Java_nn_sdk.java  nn_sdk_Java_nn_sdk.h
java_project/test_nnsdk/: .project
java_project/test_nnsdk/src/main/java/nn_sdk/: nn_sdk.java
py_nn_test/: test_fasttext.py  test_onnx.py  test_tf.py  test_tf2.py  test_trt.py  tt.py
train/: model.ckpt.data-00000-of-00001  model.ckpt.index  test.py
train_model/: __init__.py  test_sdk.py  train1.py  train2.py
train_model/model1/: model.ckpt.data-00000-of-00001  model.ckpt.index
train_model/model2/: model.ckpt.data-00000-of-00001  model.ckpt.index
